[fix] Fixed compilation issues on Ubuntu 18.04
1. For some reason link flags end up before the source files in gcc
invocations and therefore ignored by default. Fixed it by adding
the '-Wl,--no-as-needed' flag

2. Added '/usr/include/zookeeper' to include paths since that's where
the zookeeper headers are installed by Ubuntu's libzookeeper-mt-dev
package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,12 +14,8 @@ ExternalProject_Add(uthash
   INSTALL_COMMAND ""
 )
 
-# Paths
-set(ZK_C_LIB "/home1/public/mvard/zookeeper_c")
 include_directories(
-  ${ZK_C_LIB}/include ${ZK_C_LIB}/generated
-  $ENV{JAVA_HOME}/include $ENV{JAVA_HOME}/include/linux
-  external-deps/src/uthash/include
+  /usr/include/zookeeper
 )
 
 # Compiler configuration
