--- a/YCSB-CXX/CMakeLists.txt
+++ b/YCSB-CXX/CMakeLists.txt
@@ -10,7 +10,7 @@ add_executable(ycsb-kreon db/db_factory_kreonR.cc core/core_workload.cc
 target_link_libraries(ycsb-kreon kreon_client kreon_rdma kreonr)
 set_target_properties(
   ycsb-kreon
-  PROPERTIES LINK_FLAGS "-pthread -lm -lzookeeper_mt -lnuma -lrdmacm -libverbs"
+  PROPERTIES LINK_FLAGS "-Wl,-no-as-needed -pthread -lm -lzookeeper_mt -lnuma -lrdmacm -libverbs"
              COMPILE_DEFINITIONS "KREON_DISTRIBUTED")
 
 add_executable(ycsb-rdma-test ../kreon_server/globals.c db/db_factory_kreonR.cc
@@ -19,7 +19,7 @@ add_executable(ycsb-rdma-test ../kreon_server/globals.c db/db_factory_kreonR.cc
 target_link_libraries(ycsb-rdma-test kreon_client kreon_rdma kreonr)
 set_target_properties(
   ycsb-rdma-test
-  PROPERTIES LINK_FLAGS "-pthread -lm -lzookeeper_mt -lnuma -lrdmacm -libverbs"
+  PROPERTIES LINK_FLAGS "-Wl,-no-as-needed -pthread -lm -lzookeeper_mt -lnuma -lrdmacm -libverbs"
              COMPILE_DEFINITIONS "KREON_DISTRIBUTED")
 
 add_executable(ycsb-edb db/db_factory_eutropiadb.cc core/core_workload.cc
