--- a/kreon_server/CMakeLists.txt
+++ b/kreon_server/CMakeLists.txt
@@ -2,7 +2,7 @@
 # <mvard@ics.forth.gr>
 
 set(CMAKE_EXE_LINKER_FLAGS
-    "-lm -pthread -lnuma -libverbs -lrdmacm -lzookeeper_mt")
+    "-Wl,-no-as-needed -lm -pthread -lnuma -libverbs -lrdmacm -lzookeeper_mt")
 add_definitions(-DKREONR)
 
 add_library(
