[feat] Added and tested kreon rdma client blocking API At last fixed kreon rdma client api and passes test_krc_api successfully

--- a/kreon_server/CMakeLists.txt
+++ b/kreon_server/CMakeLists.txt
@@ -16,6 +16,10 @@ add_library(
   client_regions.c
   client_scanner.c
   client_regions_manager.c
+	../kreon_rdma_client/kreon_rdma_client.c
+	../kreon_server/globals.c
+	../kreon_server/client_regions.c
+	../kreon_rdma_client/kreon_rdma_client.c
   djb2.c)
 
 add_executable(
@@ -39,7 +43,8 @@ target_link_libraries(kreon_server kreon_rdma kreonr)
 add_executable(
   create_regions
   create_regions.c
-  zk_string_vector.c
+  create_regions_utils.c
+	zk_string_vector.c
   network_data.c
   regions.c
   globals.c
