--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,6 +10,8 @@ set_source_files_properties(test_circular_buffer.c PROPERTIES COMPILE_FLAGS
 
 set_source_files_properties(test_scans.c PROPERTIES COMPILE_FLAGS "-O3")
 
+set_source_files_properties(test_krc_scans.c PROPERTIES COMPILE_FLAGS "-O3")
+
 set(CMAKE_EXE_LINKER_FLAGS "-Wl,-no-as-needed -lm -lrt -pthread -lnuma") # -libverbs -lrdmacm
                                                        # -lzookeeper_mt
 # add_definitions(-DKREONR -DTESTS)
@@ -28,6 +30,13 @@ target_link_libraries(test_deletes kreon)
 
 add_executable(test_spills test_spills.c)
 target_link_libraries(test_spills kreon)
+
+add_executable(test_krc_api test_krc_api.c ../kreon_server/create_regions_utils.c)
+target_link_libraries(test_krc_api kreon_client kreon_rdma kreonr)
+  set_target_properties(
+    test_krc_api
+    PROPERTIES LINK_FLAGS "-Wl,-no-as-needed -pthread -lm -lzookeeper_mt -lnuma -lrdmacm -libverbs"
+              COMPILE_DEFINITIONS "KREON_DISTRIBUTED")
 
 add_executable(test_circular_buffer test_circular_buffer.c
                                     ../utilities/circular_buffer.c)
