Resolve "Kreon does not build in systems where Zookeeper headers don't exist"

--- a/kreon_lib/CMakeLists.txt
+++ b/kreon_lib/CMakeLists.txt
@@ -67,4 +67,6 @@ add_executable(
   ../utilities/list.c
   ${LOG})
 
-install(TARGETS kreonr kreon mkfs.kreon)
+if(KREON_BUILD_CPACK)
+  install(TARGETS kreonr kreon mkfs.kreon)
+endif()
