--- a/kreon_server/CMakeLists.txt
+++ b/kreon_server/CMakeLists.txt
@@ -16,16 +16,16 @@ add_library(
   client_regions.c
   client_scanner.c
   client_regions_manager.c
-	../kreon_rdma_client/kreon_rdma_client.c
-	../kreon_server/globals.c
-	../kreon_server/client_regions.c
-	../kreon_rdma_client/kreon_rdma_client.c
+  ../kreon_rdma_client/kreon_rdma_client.c
+  ../kreon_server/globals.c
+  ../kreon_server/client_regions.c
+  ../kreon_rdma_client/kreon_rdma_client.c
   djb2.c)
 
 add_executable(
   kreon_server
   server.c
-	replica_utilities.c
+  replica_utilities.c
   globals.c
   zk_string_vector.c
   regions_manager.c
@@ -44,7 +44,7 @@ add_executable(
   create_regions
   create_regions.c
   create_regions_utils.c
-	zk_string_vector.c
+  zk_string_vector.c
   network_data.c
   regions.c
   globals.c
@@ -56,21 +56,21 @@ target_link_libraries(create_regions kreon_rdma kreonr)
 
 # FIXME put_get_test and scan_test don't compile add_executable(put_get_test
 # tests/put_get.c zk_string_vector.c network_data.c zk_server.c
-# network_data_server.c server_regions.c regions.c messages.c
-# storage_devices.c rbtree.c  zk_client.c zk_string_vector.c
-# network_data.c network_data.client.c client_regions.c )
-# target_link_libraries(put_get_test kreon_rdma)
+# network_data_server.c server_regions.c regions.c messages.c storage_devices.c
+# rbtree.c  zk_client.c zk_string_vector.c network_data.c network_data.client.c
+# client_regions.c ) target_link_libraries(put_get_test kreon_rdma)
 
 # add_executable(scan_test tests/scan.c zk_string_vector.c network_data.c
-# zk_server.c network_data_server.c server_regions.c regions.c
-# messages.c storage_devices.c rbtree.c  zk_client.c
-# zk_string_vector.c network_data.c network_data.client.c
-# client_regions.c client_scanner.c ) add_executable(scan_test
-# tests/scan.c) target_link_libraries(scan_test tuclient kreon_rdma)
+# zk_server.c network_data_server.c server_regions.c regions.c messages.c
+# storage_devices.c rbtree.c  zk_client.c zk_string_vector.c network_data.c
+# network_data.client.c client_regions.c client_scanner.c )
+# add_executable(scan_test tests/scan.c) target_link_libraries(scan_test
+# tuclient kreon_rdma)
 
 # add_executable(fake_client fake_client.c client_regions_manager.c rbtree.c
-# zk_client.c zk_string_vector.c network_data.c network_data.client.c
-# regions.c messages.c client_regions.c client_scanner.c
-# ../TuRDMA/rdma.c ) target_link_libraries(fake_client kreon_rdma)
-
-install(TARGETS kreon_client kreon_server create_regions)
+# zk_client.c zk_string_vector.c network_data.c network_data.client.c regions.c
+# messages.c client_regions.c client_scanner.c ../TuRDMA/rdma.c )
+# target_link_libraries(fake_client kreon_rdma)
+if(KREON_BUILD_CPACK)
+  install(TARGETS kreon_client kreon_server create_regions)
+endif()
