--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,18 +2,20 @@
 
 cmake_minimum_required(VERSION 3.11.0)
 include(FetchContent)
-include(GNUInstallDirs)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 project(kreon VERSION 1.0)
 
-if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
-  message("Debug build")
-elseif("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
-  message("Release build")
+include(GNUInstallDirs)
+
+set(DEFAULT_BUILD_TYPE "Debug")
+if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
+  message(STATUS "Setting build type to '${DEFAULT_BUILD_TYPE}' as none was specified.")
+  set(CMAKE_BUILD_TYPE "${DEFAULT_BUILD_TYPE}" CACHE STRING "Choose the type of build." FORCE)
+  # Set the possible values of build type for cmake-gui
+  set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
 else()
-  message(WARNING "No build type specified defaults to Debug build!")
-  set(CMAKE_BUILD_TYPE "Debug")
+	message(STATUS "${CMAKE_BUILD_TYPE} build")
 endif()
 
 file(GLOB_RECURSE ALL_C_SOURCE_FILES ${CMAKE_SOURCE_DIR}/kreon/*.c
