Create dynamic libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,9 @@
 
 cmake_minimum_required(VERSION 3.11.0)
 include(FetchContent)
-include(GNUInstallDirs)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(CMAKEPOSITION_INDEPENDENT_CODE ON)
 project(kreon VERSION 1.0)
 
 if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
@@ -16,9 +16,7 @@ else()
   set(CMAKE_BUILD_TYPE "Debug")
 endif()
 
-file(GLOB_RECURSE ALL_C_SOURCE_FILES ${CMAKE_SOURCE_DIR}/kreon/*.c
-     ${CMAKE_SOURCE_DIR}/kreon/*.h ${CMAKE_SOURCE_DIR}/tests/*.c
-     ${CMAKE_SOURCE_DIR}/tests/*.h)
+include(GNUInstallDirs)
 
 file(COPY ${CMAKE_SOURCE_DIR}/scripts/mkfs.eutropia.single.sh
      DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/YCSB-CXX/)
@@ -32,25 +30,31 @@ file(COPY ${CMAKE_SOURCE_DIR}/YCSB-CXX/workloads
 file(COPY ${CMAKE_SOURCE_DIR}/YCSB-CXX/execution_plan.txt
      DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/YCSB-CXX/)
 
-find_program(CLANG_FORMAT "clang-format")
-if(CLANG_FORMAT)
-  add_custom_target(format COMMAND clang-format -i ${ALL_C_SOURCE_FILES})
-else()
-  message("Clang-format not installed!")
-endif()
-
-FetchContent_Populate(
+FetchContent_Declare(
   uthash # Recommendation: Stick close to the original name.
   GIT_REPOSITORY https://github.com/troydhanson/uthash.git
-  SOURCE_DIR external-deps/src/uthash # (Relative) path within in the build
-                                      # directory.
+  SOURCE_DIR
+  external-deps/src/uthash # (Relative) path within in the build directory.
 )
 
-FetchContent_Populate(
-  log # Recommendation: Stick close to the original name.
-  GIT_REPOSITORY https://github.com/rxi/log.c.git
-  SOURCE_DIR external-deps/log # (Relative) path within in the build directory.
-)
+FetchContent_Declare(log # Recommendation: Stick close to the original name.
+                     GIT_REPOSITORY https://github.com/innerout/log.c.git)
+
+FetchContent_GetProperties(uthash)
+FetchContent_GetProperties(log)
+
+if(NOT uthash_POPULATED)
+  FetchContent_Populate(uthash)
+  FetchContent_MakeAvailable(uthash)
+endif()
+
+if(NOT log_POPULATED)
+  FetchContent_Populate(log)
+  add_subdirectory(${log_SOURCE_DIR} ${log_BINARY_DIR})
+  message(${log_SOURCE_DIR})
+  include_directories(${log_SOURCE_DIR}/include)
+  FetchContent_MakeAvailable(log)
+endif()
 
 set(Zookeeper_LIB_PATHS /usr/local/lib /opt/local/lib /usr/lib/x86_64-linux-gnu)
 find_path(Zookeeper_INCLUDE_DIR zookeeper.h /usr/local/include /usr/include
@@ -77,7 +81,6 @@ endif()
 include(CMakeconfig.txt)
 configure_file(config.h.in config.h @ONLY)
 
-include_directories(${CMAKE_BINARY_DIR}/external-deps/log/src/)
 # Compiler configuration
 if(NOT CMAKE_C_COMPILER)
   set(CMAKE_C_COMPILER "gcc")
