--- a/YCSB-CXX/CMakeLists.txt
+++ b/YCSB-CXX/CMakeLists.txt
@@ -18,28 +18,21 @@ if(Zookeeper_LIBRARY)
       "-Wl,-no-as-needed -pthread -lm -lzookeeper_mt -lnuma -lrdmacm -libverbs"
       COMPILE_DEFINITIONS "KREON_DISTRIBUTED")
 
-  add_executable(ycsb-kreon db/db_factory_kreonR.cc core/core_workload.cc
-                            driver/ycsbc.cc ../kreon_server/globals.c)
+  # add_executable(ycsb-kreon db/db_factory_kreonR.cc core/core_workload.cc
+  # driver/ycsbc.cc ../kreon_server/globals.c)
 
-  target_link_libraries(ycsb-kreon kreon_client kreon_rdma kreonr log)
-  set_target_properties(
-    ycsb-kreon
-    PROPERTIES
-      LINK_FLAGS
-      "-Wl,-no-as-needed -pthread -lm -lzookeeper_mt -lnuma -lrdmacm -libverbs"
-      COMPILE_DEFINITIONS "KREON_DISTRIBUTED")
+  # target_link_libraries(ycsb-kreon kreon_client kreon_rdma kreonr log)
+  # set_target_properties( ycsb-kreon PROPERTIES LINK_FLAGS "-Wl,-no-as-needed
+  # -pthread -lm -lzookeeper_mt -lnuma -lrdmacm -libverbs" COMPILE_DEFINITIONS
+  # "KREON_DISTRIBUTED")
 
-  add_executable(
-    ycsb-rdma-test ../kreon_server/globals.c db/db_factory_kreonR.cc
-                   core/core_workload.cc driver/ycsbc.cc)
+  # add_executable( ycsb-rdma-test ../kreon_server/globals.c
+  # db/db_factory_kreonR.cc core/core_workload.cc driver/ycsbc.cc)
 
-  target_link_libraries(ycsb-rdma-test kreon_client kreon_rdma kreonr log)
-  set_target_properties(
-    ycsb-rdma-test
-    PROPERTIES
-      LINK_FLAGS
-      "-Wl,-no-as-needed -pthread -lm -lzookeeper_mt -lnuma -lrdmacm -libverbs"
-      COMPILE_DEFINITIONS "KREON_DISTRIBUTED")
+  # target_link_libraries(ycsb-rdma-test kreon_client kreon_rdma kreonr log)
+  # set_target_properties( ycsb-rdma-test PROPERTIES LINK_FLAGS "-Wl,-no-as-
+  # needed -pthread -lm -lzookeeper_mt -lnuma -lrdmacm -libverbs"
+  # COMPILE_DEFINITIONS "KREON_DISTRIBUTED")
 endif()
 
 add_executable(ycsb-edb db/db_factory_eutropiadb.cc core/core_workload.cc
