--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -34,18 +34,7 @@ add_executable(test_circular_buffer test_circular_buffer.c
 
 # Targets with dependencies to Zookeeper should be added in this if block
 if(Zookeeper_LIBRARY)
-  add_executable(test_region_watchers test_region_watchers.c
-                                      ../kreon_server/create_regions_utils.c)
-  target_link_libraries(test_region_watchers kreon_client kreon_rdma kreonr log)
-  set_target_properties(
-    test_region_watchers
-    PROPERTIES
-      LINK_FLAGS
-      "-Wl,-no-as-needed -pthread -lm -lzookeeper_mt -lnuma -lrdmacm -libverbs"
-      COMPILE_DEFINITIONS "KREON_DISTRIBUTED")
-
-  add_executable(test_krc_api test_krc_api.c
-                              ../kreon_server/create_regions_utils.c)
+  add_executable(test_krc_api test_krc_api.c)
   target_link_libraries(test_krc_api kreon_client kreon_rdma kreonr log)
   set_target_properties(
     test_krc_api
