--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,21 +8,24 @@ build_gcc:
   script:
     - mkdir -p build;cd build
     - cmake .. -DCMAKE_BUILD_TYPE=Debug
-    - make mkfs.kreon;make kreon;make ycsb-edb;make test_scans;make test_spills;make test_spillscans;make test_deletes;
+    - make mkfs.kreon;make kreon;make kreon-shared
+    - make ycsb-edb;make test_scans;make test_spills;make test_spillscans;make test_deletes;
 
 build_clang:
   stage: build
   script:
     - mkdir -p build;cd build
     - cmake .. -DCMAKE_BUILD_TYPE=Debug -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
-    - make mkfs.kreon;make kreon;make ycsb-edb;make test_scans;make test_spills;make test_spillscans;make test_deletes;
+    - make mkfs.kreon;make kreon;make kreon-shared
+    - make ycsb-edb;make test_scans;make test_spills;make test_spillscans;make test_deletes;
 
 build_clang-tidy:
   stage: build
   script:
     - mkdir -p build;cd build
     - cmake .. "-DCMAKE_C_CLANG_TIDY=/bin/clang-tidy;-checks=*"
-    - make mkfs.kreon;make kreon;make ycsb-edb;make test_scans;make test_spills;make test_spillscans;make test_deletes;
+    - make mkfs.kreon;make kreon;make kreon-shared
+    - make ycsb-edb;make test_scans;make test_spills;make test_spillscans;make test_deletes;
 
 pre-commit:
   stage: build
