--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 # File: CMakeLists.txt Author: Michalis Vardoulakis <mvard@ics.forth.gr>
 
+include(cmake_utils/PreventInSouceBuilds.cmake.in)
 cmake_minimum_required(VERSION 3.11.0)
 include(FetchContent)
-
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 project(kreon VERSION 1.0)
