--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,22 @@ build_clang:
     - make mkfs.kreon;make kreon;make kreon-shared
     - make ycsb-edb;make test_scans;make test_spills;make test_spillscans;make test_deletes;
 
+build_rdma_gcc:
+  image: carvicsforth/ubuntu_carv:latest
+  stage: build
+  script:
+    - mkdir -p build;cd build
+    - cmake .. -DCMAKE_BUILD_TYPE=Debug -DCMAKE_C_COMPILER=gcc-10 -DCMAKE_CXX_COMPILER=g++-10
+    - make all
+
+build_rdma_clang:
+  image: carvicsforth/ubuntu_carv:latest
+  stage: build
+  script:
+    - mkdir -p build;cd build
+    - cmake .. -DCMAKE_BUILD_TYPE=Debug -DCMAKE_C_COMPILER=clang-10 -DCMAKE_CXX_COMPILER=clang++-10
+    - make all
+
 build_clang-tidy:
   stage: build
   script:
